--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+
+
+<%= link_to "Log out", destroy_user_session_path, method: :delete %>
+<%= link_to "Login", new_user_session_path%>
