--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,6 +10,15 @@
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
 
+    <%= f.input :name,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "name" }%>
+    <%= f.input :pseudo,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "pseudo" }%>
+
     <%= f.input :password,
                 hint: "leave it blank if you don't want to change it",
                 required: false,
