--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,9 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div>
+  <h1 class="text-center">Preflop</h1>
+  <br>
+  <h3 class="text-center">Welcome to the best poker app ! Only for players 🤑💰</h3>
 
 
-<%= link_to "Log out", destroy_user_session_path, method: :delete %>
-<%= link_to "Login", new_user_session_path%>
+  <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+  <%= link_to "Login", new_user_session_path%>
+</div>
