--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,13 +15,20 @@
       <li class="nav-item align-navbar-item">
         <a class="nav-link" href="/dashboard">Dashboard</a>
       </li>
+      <% if user_signed_in? %>
+          <li class="nav-item align-navbar-item me-2 ms-4" >🟢<%= current_user.pseudo%></li>
+      <% end %>
+
+
       <li class="nav-item dropdown">
         <%= image_tag "sam_photo.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
         <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
           <% if user_signed_in? %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           <% else %>
-            <%= link_to "Login", new_user_session_path, class: "dropdown-item" %>
+            <%= link_to "Log In", new_user_session_path, class: "dropdown-item" %>
+            <%= link_to "Sign In", new_user_registration_path, class: "dropdown-item" %>
+
           <% end %>
         </div>
       </li>
