--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -5,3 +5,6 @@
     <li><%= link_to game.name, game_path(game) %></li>
   <% end %>
 </ul>
+
+
+<%= link_to "Create a new Game", new_game_path, class: "btn btn-success"  %>
