--- a/app/assets/stylesheets/components/_player-card.scss
+++ b/app/assets/stylesheets/components/_player-card.scss
@@ -1,6 +1,6 @@
 .player-card {
   background-color: white;
-  width: fit-content;
+  width: 150px;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 1px 1px 12px green;
