--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -20,12 +20,24 @@
 
 <% @game.reservations.each do |reservation| %>
   <div class="player-card m-3">
-    <h3><%= reservation.user.pseudo %></h3>
+    <h3 class="text-center"><%= reservation.user.pseudo %></h3>
     <%# <% reservation.user.hand.last.cards %>
-    <p>
-      Cards:
-      <% @cards.sample(2).each do |card| %>
-      <%= card.name  %>
+    <p class="text-center">
+      <% @index1 = 0 %>
+      <% @index2 = 1 %>
+      <% @game.users.each do |user| %>
+        <% user.cards = [] %>
+        <% user.cards << @game.hands.last.cards[@index1] %>
+        <% user.cards << @game.hands.last.cards[@index2] %>
+        <% user.cards.each do |card| %>
+          <% if user == current_user && reservation.user == current_user %>
+            <%= card.name %>
+          <% else %>
+            <%= "" %>
+          <% end %>
+        <% end %>
+        <% @index1 += 2 %>
+        <% @index2 += 2 %>
       <% end %>
     </p>
   </div>
