--- a/app/assets/stylesheets/components/_board-card.scss
+++ b/app/assets/stylesheets/components/_board-card.scss
@@ -1,6 +1,9 @@
 .board-cards {
   width: 600px;
   border: 1px solid grey;
+  display:flex;
+  justify-content:center;
+  align-items:center;
 }
 
 .board-card {
