--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -15,12 +15,44 @@
 <br>
 
 <%= simple_form_for [@game, @hand] do |f| %>
-      <%= f.submit "Deal card", class: "btn btn-primary" %>
+      <%= f.submit "Shuffle and deal", class: "btn btn-primary" %>
+<% end %>
+
+<% if @game.hands.last.flop_cards.count == 0 %>
+  <%= simple_form_for [@game, @game.hands.last, @flop_card] do |f| %>
+        <%= f.submit "Deal flop", class: "btn btn-primary" %>
+  <% end %>
 <% end %>
 
 
 <div class="current-user-card">
-  <%= @user.pseudo %>
-  <%= @game.hands.last.user_cards.where(user: @user)[0].deck_card.name %>
-  <%= @game.hands.last.user_cards.where(user: @user)[1].deck_card.name %>
+  <div class="player-card m-3">
+  <h3 class="text-center"><%= @user.pseudo %></h3>
+  <p class="text-center">
+    <%= @game.hands.last.user_cards.where(user: @user)[0].deck_card.name %>
+    <%= @game.hands.last.user_cards.where(user: @user)[1].deck_card.name %>
+  </p>
+  </div>
+</div>
+
+
+<div class="other-player-card">
+  <% @game.users.where.not(pseudo: current_user.pseudo).each do |user| %>
+    <div class="player-card m-3">
+      <h3 class="text-center"><%= user.pseudo %></h3>
+      <%# <% reservation.user.hand.last.cards %>
+    </div>
+  <% end %>
+</div>
+
+
+<div class="board-cards">
+    <% if @game.hands.last %>
+      <% @game.hands.last.flop_cards.each do |card| %>
+        <div class="flop board-card">
+          <%= card.deck_card.name %>
+        </div>
+      <% end %>
+    <% end %>
+  </div>
 </div>
