--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -20,7 +20,7 @@
   <% end %>
 <% end %>
 
-<% if @game.hands.last %>
+<% if @game.hands.last && @game.users.include?(@user) %>
   <% if @game.hands.last.flop_cards.count == 0 %>
     <%= simple_form_for [@game, @game.hands.last, @flop_card] do |f| %>
           <%= f.submit "Deal flop", class: "btn btn-primary" %>
@@ -28,16 +28,17 @@
   <% end %>
 <% end %>
 
-
-<div class="current-user-card player-card m-3 <%= 'not-joined' if !@game.users.include?(@user) %>">
-  <h3 class="text-center"><%= @user.pseudo %></h3>
-  <% if @game.hands.last %>
-    <p class="text-center">
-      <%= @game.hands.last.user_cards.where(user: @user)[0].deck_card.name %>
-      <%= @game.hands.last.user_cards.where(user: @user)[1].deck_card.name %>
-    </p>
-  <% end %>
-</div>
+<% if @game.users.include?(@user) %>
+  <div class="current-user-card player-card m-3 <%= 'not-joined' if !@game.users.include?(@user) %>">
+    <h3 class="text-center"><%= @user.pseudo %></h3>
+    <% if @game.hands.last %>
+      <p class="text-center">
+        <%= @game.hands.last.user_cards.where(user: @user)[0].deck_card.name %>
+        <%= @game.hands.last.user_cards.where(user: @user)[1].deck_card.name %>
+      </p>
+    <% end %>
+  </div>
+<% end %>
 
 
 <div class="other-player-card">
@@ -49,14 +50,15 @@
   <% end %>
 </div>
 
-
-<div class="board-cards">
-    <% if @game.hands.last %>
-      <% @game.hands.last.flop_cards.each do |card| %>
-        <div class="flop board-card">
-          <%= card.deck_card.name %>
-        </div>
+<% if @game.users.count > 0 %>
+  <div class="board-cards">
+      <% if @game.hands.last %>
+        <% @game.hands.last.flop_cards.each do |card| %>
+          <div class="flop board-card">
+            <%= card.deck_card.name %>
+          </div>
+        <% end %>
       <% end %>
-    <% end %>
+    </div>
   </div>
-</div>
+<% end %>
