--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -7,7 +7,8 @@
   <% end %>
 <% else %>
   <% reservation_idd = Reservation.all.where(user_id: current_user.id, game_id: @game.id).to_a[0].id %>
-  <%= link_to "Leave Game", game_reservation_path(@game, reservation_idd), method: :delete, class: "btn btn-danger" %>
+  <%# <%= link_to "Leave Game", game_reservation_path(@game, reservation_idd), method: :delete, class: "btn btn-danger" %>
+  <%= link_to "Leave the Game", game_reservation_path(@game, reservation_idd), :method => :put, class: "btn btn-danger" %>
 <% end %>
 
 
@@ -38,7 +39,7 @@
   <% end %>
 <% end %>
 
-<% if @game.users.include?(@user) %>
+<% if @active_players.include?(@user) %>
   <div class="current-user-card player-card m-3 <%= 'not-joined' if !@game.users.include?(@user) %>">
     <div class="d-flex" >
       <h3 class="text-center"><%= @user.pseudo %></h3>
@@ -57,7 +58,7 @@
 <% end %>
 
 
-<% @game.users.where.not(pseudo: current_user.pseudo).each do |user| %>
+<% (@active_players - [current_user]).each do |user| %>
   <div class="other-player-card player-card m-3">
     <div class= "d-flex justify-content-between">
       <h3 class="text-center"><%= user.pseudo %></h3>
@@ -71,7 +72,7 @@
 <% end %>
 
 
-<% if @game.users.count > 0 %>
+<% if @active_players.count > 0 %>
   <div class="board-cards">
     <% if @game.hands.last %>
       <% @game.hands.last.flop_cards.each do |card| %>
