--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -64,8 +64,8 @@
     <% if @game.hands.last && @game.hands.last.big_blind == @user %>
       <p> BB </p>
     <% end %>
-    <%= simple_form_for [@game, @game.hands.last, @bet], remote: true do |f| %>
-      <%= f.input :amount, label: false, as: :range, placeholder: "Bet here", collection: 1..30 %>
+    <%= simple_form_for [@game, @game.hands.last, @bet] do |f| %>
+      <%= f.input :amount, label: false, as: :range, input_html: { id: 'amount', min: 1, max:30, step: 1, value: 5, onchange: "change();" } %> <span id="result"></span>
       <%= f.submit %>
     <% end %>
   </div>
