--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -65,7 +65,7 @@
       <p> BB </p>
     <% end %>
     <%= simple_form_for [@game, @game.hands.last, @bet] do |f| %>
-      <%= f.input :amount, label: false, as: :range, input_html: { id: 'amount', min: 1, max:30, step: 1, value: 5, onchange: "change();" } %> <span id="result"></span>
+      <%= f.input :amount, label: false, as: :range, input_html: { id: 'amount', min: 1, max:30, step: 1, value: 5 } %> <span id="result"></span>
       <%= f.submit %>
     <% end %>
   </div>
