--- a/app/assets/stylesheets/components/_player-card.scss
+++ b/app/assets/stylesheets/components/_player-card.scss
@@ -1,5 +1,4 @@
 .player-card {
-  background-color: white;
   width: 150px;
   padding: 20px;
   border-radius: 5px;
@@ -8,4 +7,8 @@
 
 .not-joined {
   background-color: grey;
+}
+
+.current-better {
+  background-color: rgb(196, 255, 196);
 }
