--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -44,7 +44,7 @@
 <% end %>
 
 <% if @active_players.include?(@user) %>
-  <div class="current-user-card player-card m-3 <%= 'not-joined' if !@game.users.include?(@user) %>">
+  <div class="current-user-card player-card m-3 <%= 'not-joined' if !@game.users.include?(@user) %> <%= 'current-better' if @game.hands.last.better == @user %>">
     <div class="d-flex" >
       <h3 class="text-center"><%= @user.pseudo %></h3>
       <% if @game.hands.last && @game.hands.last.button == @user %>
@@ -64,16 +64,18 @@
     <% if @game.hands.last && @game.hands.last.big_blind == @user %>
       <p> BB </p>
     <% end %>
-    <%= simple_form_for [@game, @game.hands.last, @bet] do |f| %>
-      <%= f.input :amount, label: false, as: :range, input_html: { id: 'amount', min: 1, max:30, step: 1, value: 5 } %> <span id="result"></span>
-      <%= f.submit %>
+    <% if @user == @game.hands.last.better %>
+      <%= simple_form_for [@game, @game.hands.last, @bet] do |f| %>
+        <%= f.input :amount, label: false, as: :range, input_html: { id: 'amount', min: 1, max:30, step: 1, value: 5 } %> <span id="result"></span>
+        <%= f.submit %>
+      <% end %>
     <% end %>
   </div>
 <% end %>
 
 
 <% (@active_players - [current_user]).each do |user| %>
-  <div class="other-player-card player-card m-3">
+  <div class="other-player-card player-card m-3 <%= 'current-better' if @game.hands.last.better == user %>">
     <div class= "d-flex justify-content-between">
       <h3 class="text-center"><%= user.pseudo %></h3>
       <%# <% reservation.user.hand.last.cards %>
