player position complete

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -43,43 +43,28 @@
   <% end %>
 <% end %>
 
-
-
-
-
-<% if @active_players.include?(@user) %>
-  <div class="current-user-card player-card m-3 <%= 'current-better' if @game.hands.last.better == @user %>">
-    <div class="d-flex" >
-      <h3 class="text-center"><%= @user.pseudo %></h3>
-      <% if @game.hands.last && @game.hands.last.button == @user %>
-        <p> Btn </p>
-      <% end %>
-    </div>
-    <% if @game.hands.last && @game.hands.last.user_cards.where(user: @user)[0] %>
-      <p class="text-center">
-        <%= @game.hands.last.user_cards.where(user: @user)[0].deck_card.name %>
-        <%= @game.hands.last.user_cards.where(user: @user)[1].deck_card.name %>
-      </p>
+<% player_position = 1 %>
+<% @active_players.each do |user| %>
+  <% if @active_players.include?(@user)  %>
+    <% player_position = @active_players.find_index(user) - @active_players.find_index(@user) %>
+    <% if player_position < 0 %>
+      <% player_position = @active_players.count - @active_players.find_index(@user) + @active_players.find_index(user) %>
     <% end %>
-    <p><%= @game.reservations.where(user: @user)[0].score %></p>
-    <% if @game.hands.last && @game.hands.last.small_blind == @user %>
-      <p> SB </p>
-    <% end %>
-    <% if @game.hands.last && @game.hands.last.big_blind == @user %>
-      <p> BB </p>
-    <% end %>
-    <% if @user == @game.hands.last.better %>
-      <%= simple_form_for [@game, @game.hands.last, @bet] do |f| %>
-        <%= f.input :amount, label: false, as: :range, input_html: { id: 'amount', min: 1, max:30, step: 1, value: 5 } %> <span id="result"></span>
-        <%= f.submit %>
-      <% end %>
-    <% end %>
-  </div>
-<% end %>
-
-
-<% (@active_players - [current_user]).each do |user| %>
-  <div class="other-player-card player-card m-3 <%= 'current-better' if @game.hands.last.better == user %>">
+  <% end %>
+  <% if @active_players.count == 2 && player_position == 1 %>
+    <% player_position == 3 %>
+  <% elsif @active_players.count == 3 && player_position == 1  %>
+    <% player_position == 2 %>
+  <% elsif @active_players.count == 3 && player_position == 2  %>
+    <% player_position == 4 %>
+  <% elsif @active_players.count == 4 && player_position == 1  %>
+    <% player_position == 2 %>
+  <% elsif @active_players.count == 4 && player_position == 2  %>
+    <% player_position == 3 %>
+  <% elsif @active_players.count == 4 && player_position == 3  %>
+    <% player_position == 4 %>
+  <% end %>
+  <div class="player-card m-3 <%= 'current-better' if @game.hands.last.better == user %> position-<%=player_position%>">
     <div class= "d-flex justify-content-between">
       <h3 class="text-center"><%= user.pseudo %></h3>
       <%# <% reservation.user.hand.last.cards %>
@@ -87,6 +72,19 @@
         <p> Btn </p>
       <% end %>
     </div>
+    <% if @game.hands.last && @game.hands.last.user_cards.where(user: user)[0] %>
+      <% if user == @user %>
+        <p class="text-center">
+          <%= @game.hands.last.user_cards.where(user: @user)[0].deck_card.name %>
+          <%= @game.hands.last.user_cards.where(user: @user)[1].deck_card.name %>
+        </p>
+      <% else %>
+        <p>
+          <%= "X" %>
+          <%= "X" %>
+        </p>
+      <% end %>
+    <% end %>
     <p><%= @game.reservations.where(user: user)[0].score  %></p>
     <% if @game.hands.last && @game.hands.last.small_blind == user %>
       <p> SB </p>
@@ -94,7 +92,14 @@
     <% if @game.hands.last && @game.hands.last.big_blind == user %>
       <p> BB </p>
     <% end %>
+    <% if user == @game.hands.last.better && user == @user  %>
+      <%= simple_form_for [@game, @game.hands.last, @bet] do |f| %>
+        <%= f.input :amount, label: false, as: :range, input_html: { id: 'amount', min: 1, max:30, step: 1, value: 5 } %> <span id="result"></span>
+        <%= f.submit %>
+      <% end %>
+    <% end %>
   </div>
+  <% player_position += 1 %>
 <% end %>
 
 
