--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -2,7 +2,7 @@
 
 <ul>
   <% @games.each do |game| %>
-    <li><%= link_to game.name, game_path(game) %></li>
+    <li><%= link_to game.name, game_path(game), target: :_blank %></li>
   <% end %>
 </ul>
 
