--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <%= render "shared/navbar" %>
+    <%= render "shared/navbar" unless action_name == "show" %>
       <% if action_name == "home" %>
         <div class="content-wrapper">
           <%= render "shared/banner" %>
@@ -24,6 +24,6 @@
         <p class="alert"><%= alert %></p>
         </div>
       <% end %>
-    <%= render "shared/footer" %>
+    <%= render "shared/footer" unless action_name == "show" %>
   </body>
 </html>
