--- a/app/assets/stylesheets/components/_board-card.scss
+++ b/app/assets/stylesheets/components/_board-card.scss
@@ -1,7 +1,8 @@
 .board-cards {
   height: 200px;
   width: 600px;
-  border: 1px solid grey;
+  border: 4px solid rgba($color: #ffffff, $alpha: 0.5);
+  border-radius: 100px;
   display:flex;
   justify-content:center;
   align-items:center;
