--- a/app/assets/stylesheets/components/_poker-table.scss
+++ b/app/assets/stylesheets/components/_poker-table.scss
@@ -3,7 +3,7 @@
   border: 2px dotted #000000;
   border-radius: 50%;
   width: 100%;
-  height: 500px;
+  height: 65vh;
   display:flex;
   justify-content:center;
   align-items:center;
