--- a/app/assets/stylesheets/components/_poker-table.scss
+++ b/app/assets/stylesheets/components/_poker-table.scss
@@ -59,3 +59,7 @@
   box-shadow: 1px 1px 12px green;
   background-color: white;
 }
+
+.games-show {
+  background-color: rgba($color: #000000, $alpha: 0.2);
+}
