--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   </head>
 
-  <body>
+  <body class="<%=params[:controller]%>-<%=params[:action]%>">
     <%= render "shared/navbar" unless action_name == "show" %>
       <% if action_name == "home" %>
         <div class="content-wrapper">
